fixed z-index bug on work page overlapping w/ mobile nav

--- a/client/src/components/navbar/query.css
+++ b/client/src/components/navbar/query.css
@@ -29,7 +29,7 @@
     box-shadow: 5px 5px 0px var(--mobile-shadow);
     text-decoration: underline;
     transition: 0.3s;
-    z-index: 1;
+    z-index: 4;
   }
 
   .navbar-right.active {
